--- a/_config.yml
+++ b/_config.yml
@@ -38,3 +38,5 @@ exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
+
+theme: jekyll-theme-cayman
