--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Tale
+title:          Tale/De Rerum
 description:    "Minimal Jekyll theme for storytellers"
 url:            "https://chesterhow.github.io"
 
@@ -8,9 +8,9 @@ google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Chester How
+  name:         Jakob Hillebrand
   url:          https://chester.how
-  email:        chesterhow@gmail.com
+  email:        jakobhillebrand2001@gmail.com
 
 # Build settings
 markdown:       kramdown
@@ -27,7 +27,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
-  # - jemoji #Uncomment this to allow emoji in your post
+  - jemoji
 
 # Permalinks
 permalink:      /:year-:month-:day/:title
