--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Tale/De Rerum
-description:    "Minimal Jekyll theme for storytellers"
+title:          De Rerum
+description:    "Ich über die Dinge"
 url:            "https://chesterhow.github.io"
 
 # Google Analytics
