--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ plugins:
   - jemoji
 
 # Permalinks
-permalink:      /:year-:month-:day/:title
+permalink:      /:year-:month-:day
 paginate:       5
 
 # Excludes
