--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,10 @@ exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
 
+related_posts_section:
+  max_count:        5
+  min_common_tags:  2
+
 social:
   email: inelaah@gmail.com
   github: https://github.com/inelaah
