--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,6 @@ related_posts_section:
   min_common_tags:  1
 
 social:
-  email: inelaah@gmail.com
-  github: https://github.com/inelaah
+  email: jakobhillebrand2001@gmail.com
+  github: https://github.com/jakobhillebrand/derebus
   twitter: https://twitter.com
-  linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
