--- a/_config.yml
+++ b/_config.yml
@@ -46,4 +46,4 @@ related_posts_section:
 social:
   email: jakobhillebrand2001@gmail.com
   github: https://github.com/jakobhillebrand/derebus
-  twitter: https://twitter.com
+  reddit: https://www.reddit.com/r/DeRebus/
