--- a/_config.yml
+++ b/_config.yml
@@ -47,3 +47,6 @@ social:
   email: jakobhillebrand2001@gmail.com
   github: https://github.com/jakobhillebrand/derebus
   reddit: https://www.reddit.com/r/DeRebus/
+
+sponsoring:
+  ko-fi: https://ko-fi.com/jakobhillebrand
