--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:          De Rebus
 description:    "Ich über die Dinge"
-url:            "https://jakobhillebrand.github.io/derebus/"
+url:            "https://jakobhillebrand.github.io/derebus"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
