--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          De Rebus
+title:          "De Rebus"
 description:    "Ich über die Dinge"
 url:            "https://jakobhillebrand.github.io/derebus"
 
